--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,4 +1,5 @@
 $primary: black;
 $secondary:;
 $time: .25s; /* changes time of gun recoil */
-$flip: 0deg;
+$flip: 0deg; /* changes can rotation */
+$mid: auto; /* centers object */
